--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-animated-numbers": "^0.16.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "react-spring": "^9.7.3",
     "react-type-animation": "^3.1.0",
     "resend": "^1.0.0",
