--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-spring": "^9.7.3",
     "react-type-animation": "^3.1.0",
     "resend": "^1.0.0",
+    "sharp": "^0.33.2",
     "tailwindcss": "3.3.3"
   }
 }
